Test/semantic_tests/error05_type_mismatch.expected
Error type 5 at Line 5: Type mismatch in assignment.
