Test/semantic_tests/error05_type_mismatch.cmm
int main()
{
    int i;
    float f;
    i = f;
    return 0;
}
